Enhance user and skill management; add visibility and categorization features for skills, testimonials, and user settings; implement slug generation for user profiles; refactor repositories and services for improved data handling.